# Free-indexing

./: CMakeLists.txt  Dockerfile  README.md  action.yml  docker_build.bat  docker_run.bat  make.bat  make_win.bat  make_win_intel.bat  make_win_intel_single.bat  make_win_vcpp.bat  make_win_vcpp_single.bat
.github/workflows/: main.yml
build_scripts/: make_deb_clang_release.sh  make_deb_gcc_release.sh  make_win_intel.bat  make_win_intel_single.bat  make_win_vcpp.bat  make_win_vcpp_single.bat
cmake_config/: macros.cmake  windows.cmake
cmake_config/deb_clang_release/: config.cmake
cmake_config/deb_gcc_release/: config.cmake
cmake_config/linux-deb-gcc/: config.cmake
cmake_config/win-vcpp/: config.cmake
cmake_config/win_intel/: config.cmake
docker_scripts/: build_deb_gcc_release.bat
src/: CMakeLists.txt  NDArray.cpp  NDArray.h  NDArray_1D.h  NDArray_1D_impl.h  NDArray_ND.h  NDArray_ND_impl.h  NDVector.cpp  NDVector.h  NDVector_1D.h  NDVector_1D_impl.h  NDVector_ND.h  NDVector_ND_impl.h  Vector1D.h  Vector2D.h  Vector3D_complicao.h  Vector3D_ptr.h  Vector3D_pyramid.h  Vector3D_single.h  Vector3D_triple.h  Vector_generic.h  Vector_ptr.h  config.natvis  main.cpp  typedef.h
src/common/: CMakeLists.txt  NDArray.h  NDArray_impl.h  NDVector.h  NDVector_impl.h  box.h  globaldef.h  log.cpp  log.h  typedef.h
src/common/GTest/: CMakeLists.txt  NDArrVec_test.cpp  box_test.cpp  log_test.cpp
src/foo/: CMakeLists.txt  asdf.cpp  asdf.h
src/foo/GTest/: CMakeLists.txt  asdf_test.cpp
x64/Debug/: negative_indexing.ilk
x64/Release/: negative_indexing.iobj  negative_indexing.ipdb
